--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-
             android:name=".WeatherActivity"
             android:launchMode="singleTask">
             <intent-filter>
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".Aboutme"></activity>
     </application>
 
 </manifest>
